@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.11.9-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-11-09 09:33:21, took 00:13:39, with 50 workers, on 4068 cases, 0 failed, 0 traces, 5 retries<br/>
+tested: 2025-11-09 10:15:08, took 00:13:14, with 50 workers, on 4070 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -80,6 +80,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-capwap11.tst">conn-capwap11.tst</a></td><td>success</td><td>ethernet tunneling with capwap</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-capwap12.tst">conn-capwap12.tst</a></td><td>success</td><td>vlan tunneling with capwap</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-capwap13.tst">conn-capwap13.tst</a></td><td>success</td><td>tunnel interface with capwap</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-capwap14.tst">conn-capwap14.tst</a></td><td>success</td><td>capwap server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp01.tst">conn-dhcp01.tst</a></td><td>success</td><td>dhcp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp02.tst">conn-dhcp02.tst</a></td><td>success</td><td>dhcp with arp/nd security</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp03.tst">conn-dhcp03.tst</a></td><td>success</td><td>dhcp with static allocation</td></tr>
@@ -314,6 +315,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-lwapp11.tst">conn-lwapp11.tst</a></td><td>success</td><td>ethernet tunneling with lwapp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-lwapp12.tst">conn-lwapp12.tst</a></td><td>success</td><td>vlan tunneling with lwapp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-lwapp13.tst">conn-lwapp13.tst</a></td><td>success</td><td>tunnel interface with lwapp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-lwapp14.tst">conn-lwapp14.tst</a></td><td>success</td><td>lwapp server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-minenc01.tst">conn-minenc01.tst</a></td><td>success</td><td>minenc over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-minenc02.tst">conn-minenc02.tst</a></td><td>success</td><td>minenc over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-minenc03.tst">conn-minenc03.tst</a></td><td>success</td><td>minenc over minenc</td></tr>
