@@ -17649,3 +17649,6 @@ qc pass: wireguard over wireguard
 qc pass: erspan server
 ---------------------------------- 2025-11-09 09:19:42 25.11.9
 qc pass: sreth server
+---------------------------------- 2025-11-09 10:01:54 25.11.9
+qc pass: capwap server
+qc pass: lwapp server
